--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           <h3>
 <a name="welcome-to-alinaweis-github-pages" class="anchor" href="#welcome-to-alinaweis-github-pages"><span class="octicon octicon-link"></span></a>Welcome to Alinawei's GitHub Pages.</h3>
 
-<p>Recently, i have made my first task about maven site using markdown, the internal page will give you a introduction about this topic, this is my first issued pages in github, welcome your advice.</p>
+<p>Recently, i have made my first task about maven site using markdown, the internal page will give you a introduction about this topic, this is my first issued pages in github, wish for your valuable advice.</p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Any suggestion is welcomed, please send to <a href="dreamfly_whh@163.com">my email</a></p>
+<p>Any proper suggestion is welcomed, please send to <a href="dreamfly_whh@163.com">my email</a></p>
         </section>
 
         <footer>
