--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Any proper suggestion is welcomed, please send to [my email]<a href="mailto:981665580@qq.com">981665580@qq.com</a></p>
+<p>Any proper suggestion is welcomed, please send to [my email].<a href="mailto:981665580@qq.com">981665580@qq.com</a></p>
         </section>
 
         <footer>
